--- a/Hosting/index.html
+++ b/Hosting/index.html
@@ -10,6 +10,30 @@
     
 </body>
 </html>
-<script src="script.js">
- 
+<script>
+ var arr = [1,2,3,2,1]
+
+//    var obj ={}
+//    for(var i=0; i<arr.length;i++){
+//     if(arr[i] in obj != obj[i]){
+// obj[arr[i]]
+//     }
+//     else{
+//         obj[arr[i]]= 0
+//     }
+//     for(x in obj){
+//         console.log(obj[i])
+//     }
+
+//    }
+// for(var i=0; i<arr.length;i++){
+//     if(arr[i] != arr){
+//         consoel.log(arr)
+//     }
+// }
+// arr[3,4,5]
+
+//    for(var i=0; i<arr.length;i++){
+//     if(arr[i]>arr[i+1])
+//    }
 </script>
