--- a/Promise/index.html
+++ b/Promise/index.html
@@ -7,7 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Why do you need a promise
+Promises are used to handle asynchronous operations. They provide an alternative approach for callbacks
+ by reducing the callback hell and writing the cleaner code. -->
+
+ <!-- What are the three states of promise
+Promises have three states:
+
+Pending: This is an initial state of the Promise before an operation begins
+Fulfilled: This state indicates that the specified operation was completed.
+Rejected: This state indicates that the operation did not complete. In this case an error value will be thrown. -->
 </body>
 </html>
 <script src="index.js">
